--- a/web-app/package.json
+++ b/web-app/package.json
@@ -1,16 +1,23 @@
 {
-    "name": "example-create-react-app-express",
-    "version": "1.0.0",
-    "scripts": {
-      "client": "cd client && yarn start",
-      "server": "nodemon server.js",
-      "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
-    },
-    "dependencies": {
-      "body-parser": "^1.18.3",
-      "express": "^4.16.4"
-    },
-    "devDependencies": {
-      "concurrently": "^4.0.1"
-    }
+  "name": "example-create-react-app-express",
+  "version": "1.0.0",
+  "proxy": "http://localhost:5000/",
+  "scripts": {
+    "start": "node app",
+    "server": "nodemon",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "npm run build --prefix client"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "cross-fetch": "^3.1.4",
+    "dotenv": "^10.0.0",
+    "express": "^4.16.4",
+    "express-validator": "^6.12.2"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1"
   }
+}
